# docs/swagger.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: Ginventory
   description: Ginventory 
@@ -6,7 +6,13 @@ info:
 servers:
   - url: http://localhost:8080
     description:  URL local
-
+tags:
+  - name: Usuarios
+    description: Rutas para la administración del usuario
+  - name: Productos
+    description: Rutas para la administración de los productos
+  - name: Categorias
+    description: Rutas para la administración de las categorias
 paths: 
   /:
   /auth/login-google:
@@ -22,4 +28,92 @@ paths:
               $ref: '#/components/schemas/LoginGoogleSchema'
       responses:
         '200':
-          description: Un Json con las caracteristicas de la compañia 
+          description: Un Json con las caracteristicas de loguiarse  
+  /auth/validate-token:
+    get:
+      summary: Ruta para validar el token
+      tags: 
+        - Login
+      security:
+        - ApiKeyAuth: []
+      responses:
+        '200':
+          description: success true   
+  /product/create/:
+    post:
+      summary: Ruta encargada de crear productos
+      tags: 
+        - Productos
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - in: path
+          name: nombre
+          schema:
+            type: string
+          description: omommnjknj
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/createCouponCompanySchema'
+      responses:
+        '200':
+          description: el cupon creado.
+  /product/list:
+    get:
+      summary: Ruta que lista todos los productos
+      tags:
+        - Productos
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: Número de la página que se solicita
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: Número de items que se retornan
+        - in: query
+          name: sort
+          schema:
+            type: string
+          description: ordenamiento
+      responses:
+       "200":
+         description: Array de los productos paginados
+  /product/search:
+    post:
+      summary: Ruta que busca productos [$regex]
+      tags:
+        - Productos
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+          description: Número de la página que se solicita
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: Número de items que se retornan
+        - in: query
+          name: sort
+          schema:
+            type: string
+          description: ordenamiento
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchSchema'
+      responses:
+       "200":
+         description: Array de productos paginados
