# src/routes/product.route.ts
@@ -6,7 +6,10 @@ import productController from "../controllers/product.controller";
 const productRoutes = Router()
 
 productRoutes.post('/create', productController.createProduct);
-productRoutes.get('/list', productController.listAllCategories);
+productRoutes.get('/list', productController.listAllProduct);
+productRoutes.get('/update', productController.updateProduct);
+productRoutes.get('/category/:idCategory', productController.listCategory);
+productRoutes.post('/search', productController.searchInput);
 
 
 
